test/sema/negative/anonymous.impala
fn foo(_: int, a: int) -> int {
    a + _
}
