test/sema/negative/anonymous.out
anonymous.impala:2 col 9: error: identifier '_' is reverserved for anonymous declarations
